# DSML_News_Classification

./: .gitignore  README.md  best_params.json  eda.ipynb  main.py  pyproject.toml  requirements.txt  submission.csv
reports/: experiment_report.md
results/ablation/: ablation_results.csv
results/ensemble_cv/: cv_report.md  fold_scores.json
results/tuning/: cnb_tuning.json  hgb_tuning.json  lr_tuning.json  mnb_tuning.json  svc_tuning.json
src/: ablation.py  cv_comparison.py  cv_utils.py  ensemble.py  explainability.py  models.py  preprocessing.py  seed.py  tuning.py
