[tool.poetry]
package-mode = false
[project]
name = "dsml-news-classifier"
version = "0.1.0"
description = "News article classification pipeline for Polito DSML Winter 2026 Project."
authors = [
    {name = "Berk",email = "69094722+AgricolaC@users.noreply.github.com"}
]
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "jupyterlab (>=4.5.3,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "nltk (>=3.9.0,<4.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "notebook (>=7.5.2,<8.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "xgboost (>=3.1.3,<4.0.0)",
    "urlextract (>=1.9.0,<2.0.0)"
]

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.14.14,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
