[tool.poetry]
package-mode = false
[project]
name = "dsml-news-classifier"
version = "0.1.0"
description = "News article classification pipeline for Polito DSML Winter 2026 Project."
authors = [
    {name = "Berk",email = "69094722+AgricolaC@users.noreply.github.com"}
]
requires-python = "^3.11"
dependencies = [
    "numpy (>=1.26.0,<3.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "scikit-learn (>=1.5.0,<2.0.0)",
    "matplotlib (>=3.8.0,<4.0.0)",
    "seaborn (>=0.13.0,<1.0.0)",
    "tqdm (>=4.66.0,<5.0.0)",
    "ftfy (>=6.2.0,<7.0.0)",
    "urlextract (>=1.9.0,<2.0.0)",
    "jupyterlab (>=4.0.0,<5.0.0)",
    "notebook (>=7.0.0,<8.0.0)"
]

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.14.14,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
